@@ -2,7 +2,6 @@ package io.stargate.sgv2.jsonapi.api.model.command;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -15,7 +14,7 @@ public enum CommandName {
   // they should not be DDL, they are not changing schema, we should add an CommandType.ADMIN for
   // them ?
 
-  ALTER_TABLE(Names.ALTER_TABLE_NAME, CommandType.DDL, CommandTarget.TABLE),
+  ALTER_TABLE(Names.ALTER_TABLE, CommandType.DDL, CommandTarget.TABLE),
   ALTER_TYPE(Names.ALTER_TYPE, CommandType.DDL, CommandTarget.TABLE),
   COUNT_DOCUMENTS(Names.COUNT_DOCUMENTS, CommandType.DML, CommandTarget.COLLECTION),
   CREATE_COLLECTION(Names.CREATE_COLLECTION, CommandType.DDL, CommandTarget.KEYSPACE),
@@ -104,11 +103,11 @@ public enum CommandName {
   public static List<CommandName> filterByTarget(CommandTarget target) {
     return Stream.of(values())
         .filter(commandName -> commandName.getTargets().contains(target))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public interface Names {
-    String ALTER_TABLE_NAME = "alterTable";
+    String ALTER_TABLE = "alterTable";
     String ALTER_TYPE = "alterType";
     String COUNT_DOCUMENTS = "countDocuments";
     String CREATE_COLLECTION = "createCollection";
