@@ -14,7 +14,6 @@ import io.stargate.sgv2.jsonapi.config.OperationsConfig;
 import io.stargate.sgv2.jsonapi.exception.SchemaException;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.DefaultDriverExceptionHandler;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.TableExtensions;
-import io.stargate.sgv2.jsonapi.service.cqldriver.executor.TableSchemaObject;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.VectorizeDefinition;
 import io.stargate.sgv2.jsonapi.service.operation.Operation;
 import io.stargate.sgv2.jsonapi.service.operation.SchemaDBTask;
@@ -23,6 +22,7 @@ import io.stargate.sgv2.jsonapi.service.operation.tables.*;
 import io.stargate.sgv2.jsonapi.service.operation.tasks.TaskGroup;
 import io.stargate.sgv2.jsonapi.service.operation.tasks.TaskOperation;
 import io.stargate.sgv2.jsonapi.service.schema.tables.*;
+import io.stargate.sgv2.jsonapi.service.schema.tables.TableSchemaObject;
 import io.stargate.sgv2.jsonapi.util.CqlIdentifierUtil;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
@@ -30,9 +30,13 @@ import java.time.Duration;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @ApplicationScoped
 public class AlterTableCommandResolver implements CommandResolver<AlterTableCommand> {
+  private static final Logger LOGGER = LoggerFactory.getLogger(AlterTableCommandResolver.class);
+
   @Inject ObjectMapper objectMapper;
   @Inject VectorizeConfigValidator validateVectorize;
 
@@ -133,7 +137,7 @@ public class AlterTableCommandResolver implements CommandResolver<AlterTableComm
         addedColumns.values().stream()
             .filter(apiTableDef.allColumns()::contains)
             .sorted(ApiColumnDef.NAME_COMPARATOR)
-            .collect(Collectors.toList());
+            .toList();
 
     if (!duplicateColumns.isEmpty()) {
       throw SchemaException.Code.CANNOT_ADD_EXISTING_COLUMNS.get(
@@ -416,7 +420,6 @@ public class AlterTableCommandResolver implements CommandResolver<AlterTableComm
     }
 
     // Should only be dropping config from existing vector columns
-
     boolean updateVectorize = false;
     for (var identifier : droppedColumns) {
       if (existingVectorizeDefs.remove(identifier) != null) {
